Fix overview component on smallest screen.

--- a/sass/components/_overview.scss
+++ b/sass/components/_overview.scss
@@ -4,10 +4,23 @@
   align-items: center;
   border-bottom: var(--line);
 
+  &__summary {
+    display: flex;
+    align-items: center;
+    margin-right: auto;
+
+    @include respond(bp-smallest) {
+      flex-direction: column;
+      justify-content: center;
+      padding: 1rem;
+    }
+  }
+
   &__heading {
     font-size: 2.25rem;
     font-weight: 300;
     text-transform: uppercase;
+    text-align: center;
     letter-spacing: 1px;
     padding: 1.5rem 3rem;
 
@@ -15,10 +28,13 @@
       font-size: 1.8rem;
       padding: 1.25rem 2rem;
     }
+
+    @include respond(bp-smallest) {
+      padding: 0.4rem 1rem;
+    }
   }
 
   &__stars {
-    margin-right: auto;
     display: flex;
   }
 
@@ -33,6 +49,11 @@
     font-size: 1.2rem;
     display: flex;
     vertical-align: center;
+
+    @include respond(bp-smallest) {
+      flex-direction: column;
+      align-items: center;
+    }
   }
 
   &__icon-location {
@@ -69,6 +90,7 @@
   &__rating-count {
     font-size: 0.8rem;
     text-transform: uppercase;
+    text-align: center;
 
     @include respond(bp-small) {
       font-size: 0.5rem;
